# PSSNet

./: README.md
learning/: graphnet.py  metrics.py  pointnet.py  pssnet_spg.py
partition/: pssnet_visualize.py
partition/segment_parsing_spg/: CMakeLists.txt
partition/segment_parsing_spg/easy3d/: CMakeLists.txt  kdtree.cpp  kdtree.h  point_cloud.h  surface_mesh_io.h  viewer.h
partition/segment_parsing_spg/python_parsing/src/: python_parsing.cpp
step-1/: README.md
step-1/semantic_urban_mesh_segmentation/: CGAL_Define.hpp  CMakeLists.txt  PTCloud.hpp  concaveman.hpp  feature_computation.cpp  feature_computation.hpp  mesh_classifier.cpp  mesh_classifier.hpp  mesh_io.cpp  mesh_io.hpp  mesh_processor.cpp  mesh_processor.hpp  operation_function.cpp  over_segmentation.cpp  parameters.cpp  parameters.hpp  spatial_hashing.hpp  super_segment.hpp
step-2/: README.md
step-2/learning/: modules.py  pssnet_custom_dataset.py  pssnet_evaluate.py  pssnet_main.py  pssnet_spg.py
step-2/learning/ecc/: GraphConvInfo.py  GraphConvModule.py
step-2/partition/: pssnet_graphs.py  pssnet_partition.py  pssnet_provider.py  pssnet_visualize.py
step-2/partition/segment_parsing_spg/easy3d/: PTCloud.hpp  ply_reader_writer.cpp  ply_reader_writer.h  point_cloud_io.cpp  surface_mesh.h  surface_mesh_io.cpp  surface_mesh_io_ply.cpp  viewer.cpp
step-2/partition/segment_parsing_spg/python_parsing/src/: CMakeLists.txt  python_parsing.cpp
